@@ -1,6 +1,5 @@
 FIXME(release-critical):
-- test fft on 2, 3, 4 etc channels       
-- spectrogram needs to show "channel is unconnected" label instead of black background
+- preserve ordering during job collection in bseengineutils.c for user and ordinary jobs
 - ensure mixer and track setup for songs created via MIDI import
 - MIDI-import: accept zero-duration notes from God_Is_A_DJ.mid
 - pianoroll: select-all/none
